# DBMigration

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  ORACLE_SETUP.md  POSTGRES_SETUP.md  QUICK_START.md  README.md  TEST_RESULTS.md  config.yaml.example  create_sample_tables.sql  data_migrator.py  docker-compose.yml  env  load_sample_data.py  migrate.py  pyproject.toml  requirements.txt  schema_converter.py  setup.py  setup_oracle_docker.sh  test_postgres_connection.py  type_mapper.py
agents/: __init__.py  agent_router.py  base_agent.py  data_agent.py  query_agent.py  schema_agent.py  validation_agent.py
config/: config.yaml.example
docs/: README.md
frontend/: __init__.py  chat_ui.py  nl_ui.py
infra/ecs/: task-def-migrate.json  task-def-streamlit.json
infra/secrets/: sample-secrets.json
infra/terraform/: main.tf  monitoring.tf  outputs.tf  secrets.tf  variables.tf
scripts/: check_oracle_connection.sh  example_usage.py  fix_env.sh  fix_oracle_connection.sh  fix_oracle_libs.sh  install_deps.sh  load_sample_data.py  setup_ec2.sh  setup_oracle_docker.sh  setup_postgres.sh  test_postgres_connection.py
src/: __init__.py
src/migration/: __init__.py  data_migrator.py  db_connector.py  schema_converter.py
src/utils/: config_loader.py  interactive_planner.py  natural_language_ui.py
tests/: test_basic.py
